# agentic-video-editor

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
assets/music/: README.md  track_cinematic_90.json  track_energetic_128.json
backend/: Dockerfile  pyproject.toml
backend/ave/: __init__.py  cli.py  config.py
backend/ave/agents/: broll.py  captions.py  editorial.py  graphics.py  ingest.py  music.py  publish.py  qc.py  release.py  render.py  revise.py
backend/ave/analysis/: manifest.py  quality.py  scenes.py  transcribe.py
backend/ave/api/: app.py
backend/ave/beat/: snap.py
backend/ave/broll/: classify.py
backend/ave/captions/: cues.py  writers.py
backend/ave/edl/: edl.schema.json  schema.py
backend/ave/feedback/: ops.py
backend/ave/llm/: client.py
backend/ave/media/: exports.py  ffmpeg.py  filtergraph.py
backend/ave/music/: grid.py  library.py
backend/ave/orchestrator/: __init__.py  graph.py
backend/ave/qc/: checks.py
backend/ave/release/: metadata.py
backend/ave/storage/: s3.py  store.py
backend/ave/worker/: tasks.py
backend/tests/: test_beat_snap.py  test_broll.py  test_captions.py  test_edl_schema.py  test_exports_publish.py  test_feedback.py  test_incremental.py  test_m5_manager.py  test_music.py  test_orchestrator_m2.py  test_pipeline.py  test_qc.py  test_release.py  test_render_m2.py
docs/: architecture.md  roadmap.md
docs/blog/: agentic-video-editor-deep-dive.md  how-i-built-an-agentic-video-editor.md
frontend/: Dockerfile  package-lock.json  package.json
scripts/: demo.py  seed.py
(+11 files in other folders)
