[project]
name = "ave"
version = "0.1.0"
description = "Agentic Video Editor — raw clips in, publishable video out"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
]

# Optional, heavy media/ML dependencies. M1 runs without them (graceful degradation);
# install per-milestone. Kept out of the core set so `pip install -e .` stays fast/CI-friendly.
[project.optional-dependencies]
media = [
    "librosa>=0.10",          # beat/tempo detection (M2)
    "scenedetect[opencv]>=0.6",
    "numpy>=1.26",
    "soundfile>=0.12",
]
ml = [
    "whisperx>=3.1",          # word-level transcription + diarization
    "mediapipe>=0.10",        # face/subject framing (optional)
]
llm = [
    "anthropic>=0.40",
]
worker = [
    "arq>=0.25",              # Redis-backed resumable job queue
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
ave = "ave.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
